# caualInferenceClasses

./: .gitignore  MIGRATION_GUIDE.md  PSM_walkthrough.ipynb  RDD_walkthrough.ipynb  README.md  main.py  pyproject.toml  requirements.txt  setup.py
archives/: DiD_walkthrough.ipynb  main.py
causal_inference/: __init__.py
causal_inference/core/: __init__.py  base.py  exceptions.py
causal_inference/methods/: __init__.py  difference_in_differences.py  propensity_score_matching.py  regression_discontinuity_design.py
causal_inference/utils/: __init__.py  data_validation.py  plotting.py
examples/notebooks/: 01_difference_in_differences_example.ipynb  02_propensity_score_matching_example.ipynb  03_regression_discontinuity_design_example.ipynb
tests/: test_did.py  test_psm.py  test_rdd.py
